--- a/home/templates/bid-list.html
+++ b/home/templates/bid-list.html
@@ -88,11 +88,13 @@
                                                 </td>
                                                 <td class="text-end">
                                                     <a href="{% url 'edit-bid' bid_id=bid.id %}"
-                                                        class="btn btn-sm btn-neutral">View</a>
-                                                    <button type="button"
-                                                        class="btn btn-sm btn-square btn-neutral text-danger-hover">
-                                                        <i class="bi bi-trash"></i>
-                                                    </button>
+                                                        class="btn btn-sm btn-neutral">View
+                                                    </a>
+                                                
+                                                    <a href="{% url 'delete-bid' bid_id=bid.id %}" class="btn btn-sm btn-square btn-neutral text-danger-hover">
+                                                        <i class="bi bi-trash"></i>  
+                                                    </a>
+                                                        
                                                 </td>
                                             </tr>
                                             {% endfor %}
