added firebase integration.. Bid Model changed

--- a/home/templates/edit-bid.html
+++ b/home/templates/edit-bid.html
@@ -97,6 +97,10 @@
                         <input type="text" class="form-control" placeholder="enter price" name="price" id="price" value="{{ bid_data.0.price }}">
                     </div>
                     <div class="col-md-12">
+                        <label class="labels">Starting Bid Price</label>
+                        <input type="text" class="form-control" placeholder="enter price" name="start_bid_price" id="start_bid_price" value="{{ bid_data.0.start_bid_price }}">
+                    </div>
+                    <div class="col-md-12">
                         <label class="labels">Bid Type</label>
                     
                             <select class="form-control" name="bid_type" id="type">
