--- a/home/templates/add-update-sub-category.html
+++ b/home/templates/add-update-sub-category.html
@@ -1,16 +1,10 @@
-{% extends "base.html" %} {% block title %}<title>Bids</title> {% endblock title %} 
+{% extends "base.html" %} 
 
-{% block style %}
+{% block title %} <title>Bids</title> {% endblock title %} 
 
-
-
-{% endblock style %}
-
-
+{% block style %} {% endblock style %}
 
 {% block body %}
-
-
 
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
@@ -18,50 +12,51 @@
         <div class="col-md-6 border-right">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    
-                    <button type="button" class="btn btn-outline-secondary btn-rounded"><i class="bi bi-arrow-left"></i> Back</button>
-    
-    
+                    <button type="button" class="btn btn-outline-secondary btn-rounded"><i class="bi bi-arrow-left"></i> Back</button>    
                     <h4 class="text-right">Sub Category</h4>
                 </div>
 
                 <form method="POST">
                     {% csrf_token %}
-                    
-                <div class="row">
-                    <div class="col-md-12 mb-3">
-                        <label for="{{ form.category_id.id_for_label }}">{{ form.category_id.label }}</label>
-                        <br>
-                        {{ form.category_id }}
-                        {% if form.category_id.errors %}
-                        <p class="mb-0 text-danger">{{ form.category_id.errors.as_text }}</p>
-                        {% endif %}
-                    </div>
-                    
-                    
-                    <div class="col-md-12 mb-3">
-                        <label for="{{ form.sub_category.id_for_label }}">{{ form.sub_category.label }}</label>
-                        <br>
-                        {{ form.sub_category }}
-                        {% if form.sub_category.errors %}
-                        <p class="mb-0 text-danger">{{ form.sub_category.errors.as_text }}</p>
-                        {% endif %}
-                    </div>
-                    
-                </div>
+                                    
+                    <div class="row">
+                        <div class="col-md-12 mb-3">
+                            <label for="{{ form.category_id.id_for_label }}">{{ form.category_id.label }}</label>
+                            <br>
+                            {{ form.category_id }}
+                            {% if form.category_id.errors %}
+                                <p class="mb-0 text-danger">{{ form.category_id.errors.as_text }}</p>
+                            {% endif %}
+                        </div>
+                        
+                        <div class="col-md-12 mb-3">
+                            <label for="{{ form.sub_category.id_for_label }}">{{ form.sub_category.label }}</label>
+                            <br>
+                            {{ form.sub_category }}
+                            {% if form.sub_category.errors %}
+                                <p class="mb-0 text-danger">{{ form.sub_category.errors.as_text }}</p>
+                            {% endif %}
+                        </div>
 
-                <div class="mt-5 text-center">
-                    <button class="btn btn-primary profile-button" type="submit">Add</button>
-                </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
+                            <br>
+                            {{ form.description }}
+                            {% if form.description.errors %}
+                                <p class="mb-0 text-danger">{{ form.description.errors.as_text }}</p>
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div class="mt-5 text-center">
+                        <button class="btn btn-primary profile-button" type="submit">Add</button>
+                    </div>
                 </form>
+
             </div>
         </div>
         
     </div>
 </div>
-
-
-
-
 
 {% endblock body %}
