--- a/home/templates/product-list.html
+++ b/home/templates/product-list.html
@@ -33,10 +33,10 @@
                     
 
 
-                    <div class="text-end">
+                    {% comment %} <div class="text-end">
                         <a href="" class="btn btn-primary">Add Product</a>
                         
-                    </div>
+                    </div> {% endcomment %}
                     <div class="table-responsive">
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
