--- a/home/templates/assessment-list.html
+++ b/home/templates/assessment-list.html
@@ -60,7 +60,7 @@
                                     <td class="text-end">
 
                                     
-                                        <a href="{% url 'user-assessment' id=data.id %}" class="btn btn-sm btn-square btn-neutral text-primary-hover">
+                                        <a href="{% url 'user-assessment' id=data.created_by %}" class="btn btn-sm btn-square btn-neutral text-primary-hover">
                                             <i class="bi bi-pencil">View</i>
                                         </a>
                                 
