--- a/home/templates/user-domanis-list.html
+++ b/home/templates/user-domanis-list.html
@@ -83,7 +83,7 @@
                                     {% endif %}
                                    </td>
                                     <td class="text-end">
-                                        <a href="" >
+                                        <a href="{% url 'delete_domain' id=data.id %}" >
                                         <button type="button"
                                             class="btn btn-sm btn-square btn-neutral text-danger-hover">
                                             <i class="bi bi-trash"></i>
