--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -167,7 +167,7 @@
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'service-provider-users-by-type' %}"
                                 aria-expanded="false"><i data-feather="message-square" class="feather-icon"></i><span
-                                    class="hide-menu">Service Provider</span></a></li>
+                                    class="hide-menu">Service Providers</span></a></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'referral_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
@@ -176,6 +176,10 @@
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'refers_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Refers</span></a></li>
+                                    
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'assement_list' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Assessments</span></a></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'bids-list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
@@ -189,29 +193,24 @@
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Subcategory</span></a></li>
 
-                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'domains_list' %}"
-                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
-                                    class="hide-menu">Domanis</span></a></li>
-
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'products_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Products</span></a></li>
 
-                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'assement_list' %}"
-                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
-                                    class="hide-menu">Assessment</span></a></li>
-
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'user_type_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
-                                    class="hide-menu">UserType</span></a></li>
+                                    class="hide-menu">UserTypes</span></a></li>
 
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'domains_list' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Domanis</span></a></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'banner_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
-                                    class="hide-menu">Add Banner</span></a></li>
+                                    class="hide-menu">Banners</span></a></li>
                         
                         <li class="list-divider"></li>
-                        <li class="nav-small-cap"><span class="hide-menu">Extra</span></li>
+
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_logout' %}"
                                 aria-expanded="false"><i data-feather="log-out" class="feather-icon"></i><span
                                     class="hide-menu">Logout</span></a></li>
